overflow-y enabled permanently to avoid navbar displacement during page change

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
 }
 
 h1 {
